--- a/index.html
+++ b/index.html
@@ -6,30 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="imagnes">
 </head>
 
 <body>
-    <ul class="menu">
-        <li> Metodología </li>
-        <li> Contacto </li>
-        <li> Servicios </li>
-        <li> Portafolio </li>
-        <li> ¿Quienes Somos? </li>
-    </ul>
-    <div class="intro">
-        <p>Oficina de diseño orientada a asesorar a los pequeños emprendedores.</p>
-        <h2>¡Ojalá sean parte de este lindo proyecto!¡Contáctanos!</h2>
-    </div>
-    <div class="Contacto boton">
-        <p> Contacto </p>
-    </div>
-    <div class="Servicios boton">
-        <h2> Servicios </h2>
-    </div>
-    <div class="Portafolio boton">
-        <h2> Portafolio </h2>
+    <div class="logonegro">
+        <img src="imagenes/mtiznegro.png" alt="logonegro">
     </div>
 
+    <div class="menu">
+        <div class="box"> Metodología </div>
+        <div class="box"> Contacto </div>
+        <div class="box"> Servicios </div>
+        <div class="box"> Portafolio </div>
+        <div class="box"> ¿Quienes Somos? </div>
+    </div>
+
+    <div class="intro">
+        <div class="logoblanco">
+            <img src="imagenes/mtizblanco.png" alt="logoblanco">
+        </div>
+
+        <div class="oficina">
+            <p>Oficina de diseño orientada a asesorar a los pequeños emprendedores.</p>
+            <h2>¡Ojalá sean parte de este lindo proyecto!¡Contáctanos!</h2>
+        </div>
+
+        <div class="contactoboton">
+            <p> Contacto </p>
+        </div>
+    </div>
+    <div class="botones">
+        <div class="serviciosboton">
+            <h2> Servicios </h2>
+        </div>
+        <div class="portafolioboton">
+            <h2> Portafolio </h2>
+        </div>
+    </div>
+
+    <div class="final">
+        <img src="imagenes/mtizblanco.png" alt="logoblanco">
+    </div>
 </body>
 
 </html>
