html y css arreglados

--- a/index.html
+++ b/index.html
@@ -6,27 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="imagnes">
+
 </head>
 
 <body>
-    <div class="logonegro">
-        <img src="imagenes/mtiznegro.png" alt="logonegro">
-    </div>
+    <header>
+        <img class="logonegro" src="imagenes/mtiznegro.png" alt="logonegro">
+        <ul class="menu">
+            <li class="nav"> Metodología </li>
+            <li class="nav"> Contacto </li>
+            <li class="nav"> Servicios </li>
+            <li class="nav"> Portafolio </li>
+            <li class="nav"> ¿Quienes Somos? </li>
+        </ul>
+    </header>
 
-    <div class="menu">
-        <div class="box"> Metodología </div>
-        <div class="box"> Contacto </div>
-        <div class="box"> Servicios </div>
-        <div class="box"> Portafolio </div>
-        <div class="box"> ¿Quienes Somos? </div>
-    </div>
+
 
     <div class="intro">
-        <div class="logoblanco">
-            <img src="imagenes/mtizblanco.png" alt="logoblanco">
-        </div>
-
+        <img class="logoblanco1" src="imagenes/mtizblanco.png" alt="logoblanco">
         <div class="oficina">
             <p>Oficina de diseño orientada a asesorar a los pequeños emprendedores.</p>
             <h2>¡Ojalá sean parte de este lindo proyecto!¡Contáctanos!</h2>
@@ -36,6 +34,7 @@
             <p> Contacto </p>
         </div>
     </div>
+    
     <div class="botones">
         <div class="serviciosboton">
             <h2> Servicios </h2>
@@ -46,7 +45,7 @@
     </div>
 
     <div class="final">
-        <img src="imagenes/mtizblanco.png" alt="logoblanco">
+        <img class="logoblanco2" src="imagenes/mtizblanco.png" alt="logoblanco">
     </div>
 </body>
 
