--- a/index3.html
+++ b/index3.html
@@ -5,41 +5,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <script>
+        function scrollToSection(className) {
+            const targetElement = document.querySelector(`.${className}`);
+            targetElement.scrollIntoView({ behavior: 'smooth' });
+        }
+    </script>
 </head>
 
 <body>
-    <ul class="menu">
-        <li> Metodología </li>
-        <li> Contacto </li>
-        <li> Servicios </li>
-        <li> Portafolio </li>
-        <li> ¿Quienes Somos? </li>
-    </ul>
-    <h1> Servicios</h1>
-    <div class="logos">
-        <h2> Logos e Isotipos</h2>
-        <p> $20.000CLP </p>
-        <p>3 Revisiones </p>
-        <p> 2 Propuestas diferentes + archivo editable</p>
+    <header>
+        <img class="logonegro" src="imagenes/mtiznegro.png" alt="logonegro">
+        <ul class="menu">
+            <a href="index.html">
+                <li class="nav"> Inicio </li>
+            </a>
+
+            <div class="contactob" onclick="scrollToSection('final')">
+                <li class="nav"> Contacto </li>
+            </div>
+            
+            <a href="index5.html">
+                <li class="nav"> Metodología </li>
+            </a>
+
+            <a href="index3.html">
+                <li class="nav"> Servicios </li>
+            </a>
+
+            <a href="index4.html">
+                <li class="nav"> Portafolio </li>
+            </a>
+
+            <a href="index2.html">
+                <li class="nav"> ¿Quienes Somos? </li>
+            </a>
+        </ul>
+    </header>
+
+
+    <div class="servicios">
+        <div class="serviciotitulo"> Servicios</div>
+        <div class="cajas">
+            <div class="logos">
+                <h2> Logos e Isotipos</h2>
+                <p> $20.000CLP </p>
+                <p>3 Revisiones </p>
+                <p> 2 Propuestas diferentes + archivo editable</p>
+            </div>
+
+            <div class="plantillas">
+                <h2> Plantillas</h2>
+                <p> $30.000CLP </p>
+                <p> Historias destacadas publicaciones y reels </p>
+            </div>
+
+            <div class="iconografia">
+                <h2> Iconografia</h2>
+                <p> $15.000CLP </p>
+                <p>3 Revisiones</p>
+                <p>2 Propuestas diferentes</p>
+            </div>
+
+            <div class="promocion">
+                <h2> Kit promocion</h2>
+                <p> $30.000CLP </p>
+                <p>Logos e isotipos Iconografía Plantillas Editables</p>
+            </div>
+        </div>
     </div>
 
-    <div class="plantillas">
-        <h2> Plantillas</h2>
-        <p> $30.000CLP </p>
-        <p> Historias destacadas publicaciones y reels </p>
-    </div>
+    <div class="final">
+        <img class="logoblanco2" src="imagenes/mtizblanco.png" alt="logoblanco">
+        <div class="correo">
+            <h1>Contacto</h1>
+            <ul>
+                <li>Correo: mtizchile@gmail.com</li>
+                <li>WhatsApp: +56985007434</li>
+                <li>Instagram: @mtiz.design</li>
+            </ul>
+        </div>
+        <div class="rrs">
+            <h1>¡Siguenos!</h1>
+            <img class="redes" src="imagenes/redes.png" alt="redes sociales">
 
-    <div class="iconografia">
-        <h2> iconografia</h2>
-        <p> $15.000CLP </p>
-        <p>3 Revisiones</p>
-        <p>2 Propuestas diferentes</p>
-    </div>
-
-    <div class="promocion">
-        <h2> Kit promocion</h2>
-        <p> $30.000CLP </p>
-        <p>Logos e isotipos Iconografía Plantillas Editables</p>
+        </div>
     </div>
 </body>
 
