--- a/index4.html
+++ b/index4.html
@@ -1,18 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style4.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+        function scrollToSection(className) {
+            const targetElement = document.querySelector(`.${className}`);
+            targetElement.scrollIntoView({ behavior: 'smooth' });
+        }
+    </script>
 </head>
+
 <body>
-    <ul class="menu">
-        <li> Metodología </li>
-        <li> Contacto </li>
-        <li> Servicios </li>
-        <li> Portafolio </li>
-        <li> ¿Quienes Somos? </li>
-    </ul>
-    <h1> Portafolio de Proyectos</h1>
+    <header>
+        <img class="logonegro" src="imagenes/mtiznegro.png" alt="logonegro">
+        <ul class="menu">
+            <a href="index.html">
+                <li class="nav"> Inicio </li>
+            </a>
+
+            <div class="contactob" onclick="scrollToSection('final')">
+                <li class="nav"> Contacto </li>
+            </div>
+
+            <a href="index5.html">
+                <li class="nav"> Metodología </li>
+            </a>
+
+            <a href="index3.html">
+                <li class="nav"> Servicios </li>
+            </a>
+
+            <a href="index4.html">
+                <li class="nav"> Portafolio </li>
+            </a>
+
+            <a href="index2.html">
+                <li class="nav"> ¿Quienes Somos? </li>
+            </a>
+        </ul>
+    </header>
+
+    <div class="pdf">
+        <embed src="pdf/prueba pdf.pdf" type="application/pdf" width="100%" height="1300px" />
+
+        <div class="itesa">
+            <img class="itesalogo" src="imagenes/itesa.png" alt="logo itesa">
+
+            <p> Uno de los primeros proyectos realizados por nosotros, <strong>“ITESA Solutions”</strong> promueve e
+                integra la
+                innovación tecnológica en los procesos mineros e industriales.</p>
+            <p>Llevan 25 años de experiencia en la
+                industria nacional, consolidado su liderazgo en tecnologías aplicadas.</p>
+
+            <p>La empresa nos confió un cambio de logo, lo que derivo a muchos otros pequeños trabajos con ellos</p>
+
+        </div>
+    </div>
+
+
+    <div class="final">
+        <img class="logoblanco2" src="imagenes/mtizblanco.png" alt="logoblanco">
+        <div class="correo">
+            <h1>Contacto</h1>
+            <ul>
+                <li>Correo: mtizchile@gmail.com</li>
+                <li>WhatsApp: +56985007434</li>
+                <li>Instagram: @mtiz.design</li>
+            </ul>
+        </div>
+        <div class="rrs">
+            <h1>¡Siguenos!</h1>
+            <img class="redes" src="imagenes/redes.png" alt="redes sociales">
+
+        </div>
+    </div>
 </body>
+
 </html>
