--- a/index5.html
+++ b/index5.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style5.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Script para que al apretar "cotacto" haga scroll hasta donde se encuentran los datos de contacto -->
+     <!-- Entiendo que los script no van aqui sino en script.js pero no me funciono de otra manera :( -->
     <script>
         function scrollToSection(className) {
             const targetElement = document.querySelector(`.${className}`);
@@ -18,8 +21,11 @@
 </head>
 
 <body>
+     <!--Menu superior-->
     <header>
-        <img class="logonegro" src="imagenes/mtiznegro.png" alt="logonegro">
+        <a href="index.html">
+            <img class="logonegro" src="imagenes/mtiznegro.png" alt="logonegro">
+        </a>
         <ul class="menu">
             <a href="index.html">
                 <li class="nav"> Inicio </li>
@@ -48,9 +54,9 @@
     </header>
 
     <div class="intrometo">
-        <img class="logoblanco1" src="imagenes/mtizblanco.png" alt="logoblanco">
+        <img class="logoblanco3" src="imagenes/mtizblanco.png" alt="logoblanco">
 
-        <div class="oficina">
+        <div class="oficina2">
             <p>Oficina de Diseño Grafico e industrial</p>
             <p>Asesoramiento de marca para pequeños y grandes emprendedores</p>
 
